add percentages descriptions in 1 Rep Max tab

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -295,93 +295,93 @@
                     </td>
                 </tr>
                 <tr>
-                    <td><p id="percentage-description-1"></p></td>
+                    <td><p id="percentage-description-1">Increases maximal strength via neural factors. Good for displaying strength. Difficult to recover from.</p></td>
                     <td><label for="percentage-input-1">%</label></td>
-                    <td><input class="percentage-input" id="percentage-input-1" type="number" value="95"
+                    <td><input class="percentage-input" id="percentage-input-1" type="number" value="95" max="100"
                                onchange="updatePercentageDescription('percentage-description-1', this.value)"/></td>
                     <td id="percentage-1"></td>
                 </tr>
                 <tr>
-                    <td><p id="percentage-description-2"></p></td>
+                    <td><p id="percentage-description-2">Best for building muscle strength, use ~80% for easy recovery, ~90% for quick strength peaking.</p></td>
                     <td><label for="percentage-input-2">%</label></td>
-                    <td><input class="percentage-input" id="percentage-input-2" type="number" value="90"
+                    <td><input class="percentage-input" id="percentage-input-2" type="number" value="90" max="100"
                                onchange="updatePercentageDescription('percentage-description-2', this.value)"/></td>
                     <td id="percentage-2"></td>
                 </tr>
                 <tr>
-                    <td><p id="percentage-description-3"></p></td>
+                    <td><p id="percentage-description-3">Best for building muscle strength, use ~80% for easy recovery, ~90% for quick strength peaking.</p></td>
                     <td><label for="percentage-input-3">%</label></td>
-                    <td><input class="percentage-input" id="percentage-input-3" type="number" value="85"
+                    <td><input class="percentage-input" id="percentage-input-3" type="number" value="85" max="100"
                                onchange="updatePercentageDescription('percentage-description-3', this.value)"/></td>
                     <td id="percentage-3"></td>
                 </tr>
                 <tr>
-                    <td><p id="percentage-description-4"></p></td>
+                    <td><p id="percentage-description-4">Best range for muscle mass building, also good for explosiveness (~70%) and strength (~80%) in Olympic lifting.</p></td>
                     <td><label for="percentage-input-4">%</label></td>
-                    <td><input class="percentage-input" id="percentage-input-4" type="number" value="80"
+                    <td><input class="percentage-input" id="percentage-input-4" type="number" value="80" max="100"
                                onchange="updatePercentageDescription('percentage-description-4', this.value)"/></td>
                     <td id="percentage-4"></td>
                 </tr>
                 <tr>
-                    <td><p id="percentage-description-5"></p></td>
+                    <td><p id="percentage-description-5">Best range for muscle mass building, also good for explosiveness (70%) and strength (80%) in Olympic lifting.</p></td>
                     <td><label for="percentage-input-5">%</label></td>
-                    <td><input class="percentage-input" id="percentage-input-5" type="number" value="75"
+                    <td><input class="percentage-input" id="percentage-input-5" type="number" value="75" max="100"
                                onchange="updatePercentageDescription('percentage-description-5', this.value)"/></td>
                     <td id="percentage-5"></td>
                 </tr>
                 <tr>
-                    <td><p id="percentage-description-6"></p></td>
+                    <td><p id="percentage-description-6">Best range for muscle mass building, also good for explosiveness (70%) and strength (80%) in Olympic lifting.</p></td>
                     <td><label for="percentage-input-6">%</label></td>
-                    <td><input class="percentage-input" id="percentage-input-6" type="number" value="70"
+                    <td><input class="percentage-input" id="percentage-input-6" type="number" value="70" max="100"
                                onchange="updatePercentageDescription('percentage-description-6', this.value)"/></td>
                     <td id="percentage-6"></td>
                 </tr>
                 <tr>
-                    <td><p id="percentage-description-7"></p></td>
+                    <td><p id="percentage-description-7">Best range for muscle mass building, also good for explosiveness (70%) and strength (80%) in Olympic lifting.</p></td>
                     <td><label for="percentage-input-7">%</label></td>
-                    <td><input class="percentage-input" id="percentage-input-7" type="number" value="65"
+                    <td><input class="percentage-input" id="percentage-input-7" type="number" value="65" max="100"
                                onchange="updatePercentageDescription('percentage-description-7', this.value)"/></td>
                     <td id="percentage-7"></td>
                 </tr>
                 <tr>
-                    <td><p id="percentage-description-8"></p></td>
+                    <td><p id="percentage-description-8">Explosiveness, speed and power. Great for muscle hardness. 60% can be used for hypertrophy when done to failure.</p></td>
                     <td><label for="percentage-input-8">%</label></td>
-                    <td><input class="percentage-input" id="percentage-input-8" type="number" value="60"
+                    <td><input class="percentage-input" id="percentage-input-8" type="number" value="60" max="100"
                                onchange="updatePercentageDescription('percentage-description-8', this.value)"/></td>
                     <td id="percentage-8"></td>
                 </tr>
                 <tr>
-                    <td><p id="percentage-description-9"></p></td>
+                    <td><p id="percentage-description-9">Explosiveness, speed and power. Great for muscle hardness. 60% can be used for hypertrophy when done to failure.</p></td>
                     <td><label for="percentage-input-9">%</label></td>
-                    <td><input class="percentage-input" id="percentage-input-9" type="number" value="50"
+                    <td><input class="percentage-input" id="percentage-input-9" type="number" value="50" max="100"
                                onchange="updatePercentageDescription('percentage-description-9', this.value)"/></td>
                     <td id="percentage-9"></td>
                 </tr>
                 <tr>
-                    <td><p id="percentage-description-10"></p></td>
+                    <td><p id="percentage-description-10"></p>Lower body ballistic work. Improves muscle hardness develops power and contraction speed.</td>
                     <td><label for="percentage-input-10">%</label></td>
-                    <td><input class="percentage-input" id="percentage-input-10" type="number" value="40"
+                    <td><input class="percentage-input" id="percentage-input-10" type="number" value="40" max="100"
                                onchange="updatePercentageDescription('percentage-description-10', this.value)"/></td>
                     <td id="percentage-10"></td>
                 </tr>
                 <tr>
-                    <td><p id="percentage-description-11"></p></td>
+                    <td><p id="percentage-description-11"></p>Lower body ballistic work. Improves muscle hardness develops power and contraction speed.</td>
                     <td><label for="percentage-input-11">%</label></td>
-                    <td><input class="percentage-input" id="percentage-input-11" type="number" value="30"
+                    <td><input class="percentage-input" id="percentage-input-11" type="number" value="30" max="100"
                                onchange="updatePercentageDescription('percentage-description-11', this.value)"/></td>
                     <td id="percentage-11"></td>
                 </tr>
                 <tr>
-                    <td><p id="percentage-description-12"></p></td>
+                    <td><p id="percentage-description-12">Upper body ballistic work, lower body plyometrics. Improves muscle hardness and contraction speed.</p></td>
                     <td><label for="percentage-input-12">%</label></td>
-                    <td><input class="percentage-input" id="percentage-input-12" type="number" value="20"
+                    <td><input class="percentage-input" id="percentage-input-12" type="number" value="20" max="100"
                                onchange="updatePercentageDescription('percentage-description-12', this.value)"/></td>
                     <td id="percentage-12"></td>
                 </tr>
                 <tr>
-                    <td><p id="percentage-description-13"></p></td>
+                    <td><p id="percentage-description-13">Upper body ballistic work, lower body plyometrics. Improves muscle hardness and contraction speed.</p></td>
                     <td><label for="percentage-input-13">%</label></td>
-                    <td><input class="percentage-input" id="percentage-input-13" type="number" value="10"
+                    <td><input class="percentage-input" id="percentage-input-13" type="number" value="10" max="100"
                                onchange="updatePercentageDescription('percentage-description-13', this.value)"/></td>
                     <td id="percentage-13"></td>
                 </tr>
