add no scroll down when hiding logo feature not working fully yet

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -358,7 +358,7 @@
                     <td id="percentage-9"></td>
                 </tr>
                 <tr>
-                    <td><p id="percentage-description-10"></p>Lower body ballistic work. Improves muscle hardness develops power and contraction speed.</td>
+                    <td><p id="percentage-description-10"></p>Lower body ballistic work. Improves muscle hardness, develops power and contraction speed.</td>
                     <td><label for="percentage-input-10">%</label></td>
                     <td><input class="percentage-input" id="percentage-input-10" type="number" value="40" max="100"
                                onchange="updatePercentageDescription('percentage-description-10', this.value)"/></td>
