--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -4,6 +4,36 @@ html body {
     color: #FF9200;
 }
 
+body {
+    overflow-y: scroll;
+}
+
+/* scrollbar styling */
+::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
+    border-radius: 10px;
+    background-color: #CCCCCC;
+}
+
+::-webkit-scrollbar
+{
+    width: 8px;
+    background-color: #454343;
+}
+
+::-webkit-scrollbar-thumb
+{
+    border-radius: 10px;
+    background-color: #FF9200;
+    background-image: -webkit-linear-gradient(90deg,
+    transparent,
+    rgba(0, 0, 0, 0.4) 50%,transparent,transparent);
+    border: 1px solid #FFFFFF;
+}
+
+
+
 /* no outline for selected input fields and buttons*/
 input:focus, button:focus {
     outline: none;
