add more streamlined solution to logo hiding feature

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,7 +11,7 @@
     <title>Weightlifting Log Home</title>
 </head>
 <body>
-<div id="logo-container">
+<div id="logo-container" style="display: block;">
 
     <!--Title and logo section-->
     <p>
