change text styling in tabs

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -285,6 +285,16 @@ button:active, input[type=submit]:active, .my-button:active {
     text-align: right;
 }
 
+/* General text styling */
+.bigger-label {
+    font-weight: bold;
+    font-size: large;
+}
+
+.tab-title {
+    font-weight: bold;
+}
+
 /* Other */
 .controls {
     margin-top: 1em;
