--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -10,7 +10,7 @@
 
 <div th:fragment="login">
     <br/>
-    <h3>Login page</h3>
+    <h3 class="tab-title">Login page</h3>
     <br/>
     <!--/*@thymesVar id="loginError" type="java"*/-->
     <p th:if="${loginError}" class="alert">Wrong username or password</p>
