modify security config, add logout success fragment

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -14,7 +14,7 @@
 <div style="margin: auto; text-align: center">
     <h2>Error!</h2>
     <p>You don't have the credentials to use this feature!</p>
-    <button onclick = "location.href = '/wl/login'" type="button">Take me back</button>
+    <button class="my-button" onclick = "location.href = '/wl/login'" type="button">Take me back</button>
 </div>
 </body>
 </html>
