--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -61,9 +61,9 @@
         <input type="hidden" th:field="*{id}"/>
         <p>Username: <input type="text" th:field="*{name}"/>
             <span th:if="${#fields.hasErrors('name')}" class="alert" th:errors="*{name}"></span></p>
-        <p>Password: <input type="text" th:field="*{password}"/>
+        <p>Password: <input type="password" th:field="*{password}"/>
             <span th:if="${#fields.hasErrors('password')}" class="alert" th:errors="*{password}"></span></p>
-        <p>Confirm password: <input type="text" th:field="*{confirmPassword}"/>
+        <p>Confirm password: <input type="password" th:field="*{confirmPassword}"/>
             <span th:if="${#fields.hasErrors('confirmPassword')}" class="alert" th:errors="*{confirmPassword}"></span></p>
         <p>Email: <input type="text" th:field="*{email}"/>
             <span th:if="${#fields.hasErrors('email')}" class="alert" th:errors="*{email}"></span></p>
