--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -287,8 +287,14 @@ button:active, input[type=submit]:active, .my-button:active {
 
 /* User tab */
 
-.workout {
+.workout-content {
     width: 75%;
+    float: left;
+}
+
+.workout-selection {
+    width: 25%;
+    float: right;
 }
 
 /* General text styling */
