--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -92,9 +92,9 @@
 
 <div th:fragment="user-panel">
     <div class="workout-content">
-        <h2>Select existing workout from the panel to the right or...</h2>
-        <button class="my-button" onclick="location.href='/wl/newworkout'" type="button">Add new
-            workout</button>
+                <h2>Select existing workout from the panel to the right or...</h2>
+                <button class="my-button" onclick="location.href='/wl/newworkout'" type="button">
+                    Add new workout</button>
     </div>
     <div class="workout-selection">
         <div class="controls">
