--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -280,12 +280,11 @@ button:active, input[type=submit]:active, .my-button:active {
 }
 
 #percentages td {
-    padding: 0;
-    margin: 0;
+    padding: 3px;
 }
 
 .percentage-input {
-    /*width: 5vw;*/
+    width: 5vw;
     text-align: right;
 }
 
