--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -351,7 +351,8 @@
                                        type="number" value="95" max="100"
                                        onchange="updatePercentageDescription('percentage-description-1', this.value)"/>
                             </td>
-                            <td id="percentage-1"></td>
+                            <td><label for="percentage-1"></label>
+                                <input type="text" id="percentage-1" value="" size="4" readonly></td>
                         </tr>
                         <tr>
                             <td><p id="percentage-description-2">Best for building muscle strength,
@@ -362,7 +363,8 @@
                                        type="number" value="90" max="100"
                                        onchange="updatePercentageDescription('percentage-description-2', this.value)"/>
                             </td>
-                            <td id="percentage-2"></td>
+                            <td><label for="percentage-2"></label>
+                                <input type="text" id="percentage-2" value="" size="4" readonly></td>
                         </tr>
                         <tr>
                             <td><p id="percentage-description-3">Best for building muscle strength,
@@ -373,7 +375,8 @@
                                        type="number" value="85" max="100"
                                        onchange="updatePercentageDescription('percentage-description-3', this.value)"/>
                             </td>
-                            <td id="percentage-3"></td>
+                            <td><label for="percentage-3"></label>
+                                <input type="text" id="percentage-3" value="" size="4" readonly></td>
                         </tr>
                         <tr>
                             <td><p id="percentage-description-4">Best range for muscle mass
@@ -384,7 +387,8 @@
                                        type="number" value="80" max="100"
                                        onchange="updatePercentageDescription('percentage-description-4', this.value)"/>
                             </td>
-                            <td id="percentage-4"></td>
+                            <td><label for="percentage-4"></label>
+                                <input type="text" id="percentage-4" value="" size="4" readonly></td>
                         </tr>
                         <tr>
                             <td><p id="percentage-description-5">Best range for muscle mass
@@ -396,7 +400,8 @@
                                        type="number" value="75" max="100"
                                        onchange="updatePercentageDescription('percentage-description-5', this.value)"/>
                             </td>
-                            <td id="percentage-5"></td>
+                            <td><label for="percentage-5"></label>
+                                <input type="text" id="percentage-5" value="" size="4" readonly></td>
                         </tr>
                         <tr>
                             <td><p id="percentage-description-6">Best range for muscle mass
@@ -407,7 +412,8 @@
                                        type="number" value="70" max="100"
                                        onchange="updatePercentageDescription('percentage-description-6', this.value)"/>
                             </td>
-                            <td id="percentage-6"></td>
+                            <td><label for="percentage-6"></label>
+                                <input type="text" id="percentage-6" value="" size="4" readonly></td>
                         </tr>
                         <tr>
                             <td><p id="percentage-description-7">Best range for muscle mass
@@ -418,7 +424,8 @@
                                        type="number" value="65" max="100"
                                        onchange="updatePercentageDescription('percentage-description-7', this.value)"/>
                             </td>
-                            <td id="percentage-7"></td>
+                            <td><label for="percentage-7"></label>
+                                <input type="text" id="percentage-7" value="" size="4" readonly></td>
                         </tr>
                         <tr>
                             <td><p id="percentage-description-8">Explosiveness, speed and power.
@@ -429,7 +436,8 @@
                                        type="number" value="60" max="100"
                                        onchange="updatePercentageDescription('percentage-description-8', this.value)"/>
                             </td>
-                            <td id="percentage-8"></td>
+                            <td><label for="percentage-8"></label>
+                                <input type="text" id="percentage-8" value="" size="4" readonly></td>
                         </tr>
                         <tr>
                             <td><p id="percentage-description-9">Explosiveness, speed and power.
@@ -440,7 +448,8 @@
                                        type="number" value="50" max="100"
                                        onchange="updatePercentageDescription('percentage-description-9', this.value)"/>
                             </td>
-                            <td id="percentage-9"></td>
+                            <td><label for="percentage-9"></label>
+                                <input type="text" id="percentage-9" value="" size="4" readonly></td>
                         </tr>
                         <tr>
                             <td><p id="percentage-description-10">Lower body ballistic work.
@@ -451,7 +460,8 @@
                                        type="number" value="40" max="100"
                                        onchange="updatePercentageDescription('percentage-description-10', this.value)"/>
                             </td>
-                            <td id="percentage-10"></td>
+                            <td><label for="percentage-10"></label>
+                                <input type="text" id="percentage-10" value="" size="4" readonly></td>
                         </tr>
                         <tr>
                             <td><p id="percentage-description-11">Lower body ballistic work.
@@ -462,7 +472,8 @@
                                        type="number" value="30" max="100"
                                        onchange="updatePercentageDescription('percentage-description-11', this.value)"/>
                             </td>
-                            <td id="percentage-11"></td>
+                            <td><label for="percentage-11"></label>
+                                <input type="text" id="percentage-11" value="" size="4" readonly></td>
                         </tr>
                         <tr>
                             <td><p id="percentage-description-12">Upper body ballistic work, lower
@@ -473,7 +484,8 @@
                                        type="number" value="20" max="100"
                                        onchange="updatePercentageDescription('percentage-description-12', this.value)"/>
                             </td>
-                            <td id="percentage-12"></td>
+                            <td><label for="percentage-12"></label>
+                                <input type="text" id="percentage-12" value="" size="4" readonly></td>
                         </tr>
                         <tr>
                             <td><p id="percentage-description-13">Upper body ballistic work, lower
@@ -484,7 +496,8 @@
                                        type="number" value="10" max="100"
                                        onchange="updatePercentageDescription('percentage-description-13', this.value)"/>
                             </td>
-                            <td id="percentage-13"></td>
+                            <td><label for="percentage-13"></label>
+                                <input type="text" id="percentage-13" value="" size="4" readonly></td>
                         </tr>
                     </table>
                 </div>
