--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -237,6 +237,7 @@ button:active, input[type=submit]:active, .my-button:active {
 
 #filler {
     height: 33px;
+    background-color: #454343;
 }
 
 /* Overall strength tab */
