--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -43,7 +43,10 @@
     <!--Either main calculator tab or login tab content are visible
     depending on boolean variable sent from controller-->
     <div class="center-container">
-        <div id="filler" style="display: none;">
+        <div id="filler-1" style="display: none;">
+            <br>
+        </div>
+        <div id="filler-2" style="display: none;">
             <br>
         </div>
         <div class="tab-content">
