Logo toggling, scrolling and tab changing done
Finished for now, might come back to it later, some testing is necessary to figure out what is optimal.

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -326,6 +326,14 @@ button:active, input[type=submit]:active, .my-button:active {
     float: right;
 }
 
+/*.top-filler {*/
+/*    max-height: 25%;*/
+/*}*/
+
+/*.bottom-filler {*/
+/*    min-height: 50%;*/
+/*}*/
+
 /* General text styling */
 .bigger-label {
     font-weight: bold;
